public/css/main.css
.none {
    display: none;
}

.error {
    color: red;
}

.profile {
    background-color: #776c6c;
}

.profile-content {
    background-color: #ffffff;
}

.file_item {
    position: relative;
}

.file_input {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0;
    font-size: 0;
    cursor: pointer;
}

.file_button {
    font-size: 12px;
    color: #2222c9;
    text-decoration: underline;
}

.form-control {
    box-shadow: 0 0 5px #4e5652;
}

.profile-edit {
    background-color: #776c6c;
}

